<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
<LinearLayout
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">


	<RelativeLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="50dp" android:onClick="onClick"
		android:gravity="center_vertical" android:layout_gravity="center_vertical"
		android:clickable="true" android:id="@+id/layoutEnable">

		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/enable"
			android:layout_alignParentLeft="true" android:textSize="24dp"
			android:layout_centerVertical="true" />

		<CheckBox android:text="" android:layout_centerVertical="true"
			android:layout_height="wrap_content" android:id="@+id/CheckBoxEnable" android:clickable="false"
			android:layout_width="wrap_content" android:layout_alignParentRight="true"></CheckBox>
	</RelativeLayout>
	<View android:background="@color/gray" android:layout_width="fill_parent"
		android:layout_height="2dp"></View>
	<!-- begin to define reminder type -->
	<RelativeLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="50dp" android:onClick="onClick"
		android:gravity="center_vertical" android:layout_gravity="center_vertical"
		android:clickable="true" android:id="@+id/layoutType">

	<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/remindType"
			android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:textSize="20dp"/>
		
	<Spinner android:id="@+id/SpinnerType" android:layout_width="180dip" android:layout_height="wrap_content" android:layout_alignParentRight="true"></Spinner>
</RelativeLayout>
	<View android:background="@color/gray" android:layout_width="fill_parent"
		android:layout_height="2dp"></View>

<!--  method-->
<RelativeLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="50dp" android:onClick="onClick"
		android:gravity="center_vertical" android:layout_gravity="center_vertical"
		android:clickable="true" android:id="@+id/layoutMethod">

	<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/remindMethod"
			android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:textSize="20dp"/>
		
	<Spinner android:id="@+id/SpinnerMethod" android:layout_width="180dip" android:layout_height="wrap_content" android:layout_alignParentRight="true"></Spinner>
</RelativeLayout>
	<View android:background="@color/gray" android:layout_width="fill_parent"
		android:layout_height="2dp"></View>

<!--  ringtone-->
<RelativeLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="50dp" android:onClick="onClick"
		android:gravity="center_vertical" android:layout_gravity="center_vertical"
		android:clickable="true" android:id="@+id/layoutRingtone">

	<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/remindRingtone"
			android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:textSize="20dp"/>
		
	<Spinner android:id="@+id/SpinnerRingtone" android:layout_width="180dip" android:layout_height="wrap_content" android:layout_alignParentRight="true"></Spinner>
</RelativeLayout>
	<View android:background="@color/gray" android:layout_width="fill_parent"
		android:layout_height="2dp"></View>
	<!-- sleeping time setting -->
	<RelativeLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="50dp" android:onClick="onClick"
		android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@+id/layoutSleep"
		android:clickable="true">

		<TextView android:layout_width="wrap_content" android:id="@+id/textSetting"
			android:layout_height="wrap_content" android:text="@string/enableSleepSetting"
			android:layout_alignParentLeft="true" android:textSize="24dp"
			android:layout_centerVertical="true" />
		
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/sleepingComment"
			android:layout_toRightOf="@id/textSetting" android:textSize="12dp"
			android:layout_centerVertical="true"
			/>

		<CheckBox android:text="" android:layout_centerVertical="true"
			android:layout_height="wrap_content" android:id="@+id/CheckBoxSleepEnable" android:clickable="false"
			android:layout_width="wrap_content" android:layout_alignParentRight="true"></CheckBox>
	</RelativeLayout>
	<!-- sleep time -->
		<RelativeLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="50dp" android:onClick="onClick"
		android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@+id/layoutSleepSetting"
		android:clickable="true">


		<EditText android:layout_width="45dip" android:maxLength="2" android:id="@+id/minute2" android:layout_height="wrap_content"  android:layout_alignParentRight="true"></EditText>

		<TextView android:layout_height="wrap_content" android:text=":" android:id="@+id/colon2" 
			android:textSize="24dp" android:layout_toLeftOf="@id/minute2"
			android:layout_centerVertical="true" android:layout_width="wrap_content"/>		

		<EditText android:layout_width="45dip" android:maxLength="2" android:id="@+id/hour2" android:layout_height="wrap_content"  android:layout_toLeftOf="@id/colon2"></EditText>

		<TextView android:id="@+id/middle"
			android:layout_height="wrap_content" android:text="@string/to" android:layout_width="wrap_content"
			 android:textSize="24dp" android:layout_toLeftOf="@id/hour2"
			android:layout_centerVertical="true" />
		
		<EditText android:layout_width="45dip" android:maxLength="2" android:id="@+id/minute1" android:layout_height="wrap_content"  android:layout_toLeftOf="@id/middle"></EditText>
	
		<TextView android:layout_width="wrap_content" android:layout_toLeftOf="@id/minute1"
			android:layout_height="wrap_content" android:text=":"
			 android:textSize="24dp" android:id="@+id/colon1"
			android:layout_centerVertical="true" />
		<EditText android:layout_width="45dip" android:maxLength="2" android:id="@+id/hour1" android:layout_height="wrap_content"  android:layout_toLeftOf="@id/colon1"></EditText>
	
		<TextView android:layout_height="wrap_content" android:text="@string/afternoon" android:id="@+id/colon4" 
			android:textSize="24dp" android:layout_toLeftOf="@id/hour1"
			android:layout_centerVertical="true" android:layout_width="wrap_content"/>		
		-->
	</RelativeLayout>
	<View android:background="@color/gray" android:layout_width="fill_parent"
		android:layout_height="2dp"></View>

<!--interval-->
<RelativeLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="50dp" android:onClick="onClick"
		android:gravity="center_vertical" android:layout_gravity="center_vertical"
		android:clickable="true" android:id="@+id/layoutRingtone">

	<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/remindInterval"
			android:layout_alignParentLeft="true" android:textSize="24dp"
			android:layout_centerVertical="true" />
		
	
<EditText android:layout_width="180dip" android:id="@+id/remindInterval" android:layout_height="wrap_content" android:inputType="number" android:layout_alignParentRight="true"></EditText>

</RelativeLayout>
	<View android:background="@color/gray" android:layout_width="fill_parent"
		android:layout_height="2dp"></View>
<!-- controller -->
<RelativeLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="50dp" android:onClick="onClick"
		android:gravity="center_vertical" android:layout_gravity="center_vertical"
		android:clickable="true" android:id="@+id/layoutRingtone">

	
<Button android:text="@string/ok" android:id="@+id/ButtonOK" android:layout_width="80dip" android:layout_height="wrap_content" android:layout_centerInParent="true" android:onClick="onClick"></Button>
<Button android:text="@string/cancel" android:layout_height="wrap_content" android:layout_toLeftOf="@+id/ButtonOK" android:id="@+id/ButtonCancel" android:layout_width="80dip" android:onClick="onClick"></Button>
<Button android:text="@string/about" android:layout_height="wrap_content" android:layout_toRightOf="@+id/ButtonOK" android:id="@+id/ButtonAbout" android:layout_width="80dip" android:onClick="onClick"></Button>
</RelativeLayout>

</LinearLayout>

</ScrollView>
